# rust-shed

./: XXX_UPLOADED_PROJECTS
shed/cachelib_stub/: Cargo.toml
shed/cloned/: Cargo.toml
shed/codegen_includer_proc_macro/: Cargo.toml
shed/failure_ext/: Cargo.toml
shed/fbinit/: Cargo.toml
shed/fbinit/macros/: Cargo.toml
shed/futures_ext/: Cargo.toml
shed/futures_stats/: Cargo.toml
shed/lock_ext/: Cargo.toml
shed/perthread/: Cargo.toml
shed/slog_glog_fmt/: Cargo.toml
shed/slog_stats/: Cargo.toml
shed/sql/: Cargo.toml
shed/sql/common/: Cargo.toml
shed/stats/: Cargo.toml
shed/stats/traits/: Cargo.toml
shed/thrift_compiler/: Cargo.toml
