[package]
name = "fbthrift_codegen_includer_proc_macro"
description = "Helps include generated thrift structures"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["fbthrift", "thrift"]
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
build = "build.rs"
include = ["src/**/*.rs", "tests/**/*.rs", "build.rs"]

[lib]
name = "codegen_includer_proc_macro"
path = "src/lib.rs"
proc-macro = true
test = false
doctest = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
quote = "1.0"
