[package]
name = "fb_failure_ext"
description = "Extensions to failure and anyhow crates"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["failure", "anyhow"]
edition = "2018"
version = "0.1.2"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[lib]
name = "failure_ext"

[dependencies]
anyhow = "1.0"
failure = "0.1"
futures = "0.1"
slog = { version = "2.5", features = ["max_level_debug"] }

[dev-dependencies]
thiserror = "1.0"
