[package]
name = "fbinit"
description = "Provides a token type to prove that initFacebook has been called"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
edition = "2018"
version = "0.1.1"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs", "test/fbinit_test.rs"]

[lib]
path = "src/lib.rs"

[[test]]
name = "fbinit_test"
path = "test/fbinit_test.rs"

[dependencies]
fbinit_macros = "0.1"
quickcheck = "0.9"

[dev-dependencies]
tokio = { version = "=0.2.13", features = ["full"] }
