[package]
name = "fb_futures_ext"
description = "Crate extending functionality of futures crate"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["futures"]
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[lib]
name = "futures_ext"

[dependencies]
anyhow = "1.0"
bytes-old = { package = "bytes", version = "0.4", features = ["serde"] }
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
fb_cloned = "0.1"
lock_ext = "0.1"
assert_matches = "1.3"
maplit = "1.0"
pretty_assertions = "0.6"
quickcheck = "0.9"
