[package]
name = "perthread"
description = "Provides helpers for accessing threadlocal variables in static context"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["threadlocal"]
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dev-dependencies]
lazy_static = "1.0"
