[package]
name = "slog_glog_fmt"
description = "Google log output format for slog"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["slog", "glog"]
edition = "2018"
version = "0.1.1"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["example/**/*.rs", "src/**/*.rs"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "slog_glog_fmt_example"
path = "example/main.rs"

[dependencies]
fb_failure_ext = "0.1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
itertools = "0.8"
nix = "0.17"
slog = { version = "2.5", features = ["max_level_debug"] }
slog-term = "2.4.2"

[dev-dependencies]
lazy_static = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
regex = "1.3.7"
thiserror = "1.0"
