[package]
name = "fb_stats"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[lib]
name = "stats"

[dependencies]
fbinit = "0.1"
fb_futures_ext = { path = "../futures_ext" }
perthread = { path = "../perthread" }
fb_stats_traits = { path = "traits" }
futures = { version = "0.3.5", features = ["async-await", "compat"] }
futures-old = { package = "futures", version = "0.1" }
lazy_static = "1.0"
tokio = { version = "=0.2.13", features = ["full"] }
tokio-old = { package = "tokio", version = "0.1" }
