[package]
name = "fbthrift_compiler"
description = "Calls fbthrift compiler to produce unified lib.rs from thrift files"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["fbthrift", "thrift"]
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["src/lib.rs", "src/main.rs", "tests/*.rs"]

[lib]
name = "thrift_compiler"
path = "src/lib.rs"

[[bin]]
name = "compiler"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"

[dev-dependencies]
lazy_static = "1.0"
regex = "1.3.7"
tempdir = "0.3"
