[package]
name = "fbinit_macros"
description = "Provides macros for fbinit crate"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

[lib]
name = "macros"
path = "lib.rs"
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "fold", "extra-traits"] }
