[package]
name = "stats_traits"
description = "Provides traits for fb_traits crate"
homepage = "https://github.com/facebookexperimental/rust-shed"
repository = "https://github.com/danobi/rust-shed"
keywords = ["stats"]
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

[lib]
path = "lib.rs"

[dependencies]
fbinit = { path = "../../fbinit" }
auto_impl = "0.4"
